--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             margin: 10px; /* Space between images and text */
         }
 
-        .footer {
-            position: absolute;
-            bottom: 10px;
+          .footer {
+            margin-top: 40px;   /* space above footer */
+            padding: 20px 0;
             width: 100%;
             text-align: center;
             font-size: 12px;
