--- a/splash_page 5.html
+++ b/splash_page 5.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>CellVision – Battery Cost & Performance Modeling</title>
+    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>   CellVision – Battery Cost & Performance Modeling</title>
 
 <style>
 :root {
@@ -166,6 +170,7 @@ footer {
 
 <header>
     <img src="cv-logo.png" alt="CellVision logo" />
+    <h2>Cell Vision</h2>
     <nav>
         <a href="#open">Open</a>
         <a href="#pro">Pro</a>
@@ -191,8 +196,8 @@ footer {
 <section class="section">
     <h2>What CellVision does</h2>
     <ul>
-        <li>Compare Li-ion and Na-ion chemistries</li>
-        <li>Evaluate cathode and anode material choices</li>
+        <li>Compare material chemistries</li>
+        <li>Predict full cell performance</li>
         <li>Explore cell design trade-offs</li>
         <li>Estimate manufacturing cost drivers</li>
     </ul>
