Revise content in splash_page 5.html
Updated text for clarity and consistency in the splash page.

--- a/splash_page 5.html
+++ b/splash_page 5.html
@@ -170,7 +170,6 @@ footer {
 
 <header>
     <img src="cv-logo.png" alt="CellVision logo" />
-    <h2>Cell Vision</h2>
     <nav>
         <a href="#open">Open</a>
         <a href="#pro">Pro</a>
@@ -182,9 +181,9 @@ footer {
 <section class="hero">
     <h1>Battery cost and performance modeling — before you build cells</h1>
     <p>
-        CellVision is a physics-grounded battery modeling tool for comparing
-        lithium-ion and sodium-ion designs, materials, and manufacturing costs.
-        Originally derived from BatPaC, now evolving into a full SaaS platform.
+        CellVision is an industry-built battery modeling tool for comparing
+        lithium or sodium-ion battery chemistries, cell designs, and manufacturing costs.
+       Now evolving into a full SaaS platform.
     </p>
 
     <div class="cta-row">
@@ -214,8 +213,12 @@ footer {
     <div class="card">
         <span class="badge">Open Source</span>
         <p>
-            The original CellVision release developed by Bedrock Materials and
+            The original CellVision, developed by Bedrock Materials and
             released to the public domain.
+            CellVision Desktop
+            Version: 2.3
+            Version Release Date: October 2025
+            License: Open Source
         </p>
         <div class="cta-row">
             <a class="button primary" href="cellvision-open.zip">Download</a>
