Refactor CellVision description and version info
Updated the description of CellVision and formatted the version details.

--- a/splash_page 5.html
+++ b/splash_page 5.html
@@ -181,8 +181,7 @@ footer {
 <section class="hero">
     <h1>Battery cost and performance modeling — before you build cells</h1>
     <p>
-        CellVision is an industry-built battery modeling tool for comparing
-        lithium or sodium-ion battery chemistries, cell designs, and manufacturing costs.
+        CellVision is an industry-built battery modeling tool to compare battery chemistries, cell designs, and manufacturing costs.
        Now evolving into a full SaaS platform.
     </p>
 
@@ -215,10 +214,10 @@ footer {
         <p>
             The original CellVision, developed by Bedrock Materials and
             released to the public domain.
-            CellVision Desktop
-            Version: 2.3
-            Version Release Date: October 2025
-            License: Open Source
+            <p>    CellVision Desktop  </p>
+            <p>    Version: 2.3  </p>
+            <p>    Version Release Date: October 2025  </p>
+            <p>    License: Open Source  </p>
         </p>
         <div class="cta-row">
             <a class="button primary" href="cellvision-open.zip">Download</a>
