Fix HTML structure and update content in splash page

--- a/splash_page 5.html
+++ b/splash_page 5.html
@@ -213,11 +213,14 @@ footer {
         <span class="badge">Open Source</span>
         <p>
             The original CellVision, developed by Bedrock Materials and
-            released to the public domain. </p>
+            released to the public domain. 
+        </p>
+        <u1>
             <p>    CellVision Desktop  </p>
             <p>    Version: 2.3  </p>
             <p>    Version Release Date: October 2025  </p>
             <p>    License: Open Source  </p>
+        </u1>
         <div class="cta-row">
             <a class="button primary" href="cellvision-open.zip">Download</a>
         </div>
