Replace list with paragraph for version info

--- a/splash_page 5.html
+++ b/splash_page 5.html
@@ -215,12 +215,12 @@ footer {
             The original CellVision, developed by Bedrock Materials and
             released to the public domain. 
         </p>
-        <u1>
-            <p>    CellVision Desktop  </p>
-            <p>    Version: 2.3  </p>
-            <p>    Version Release Date: October 2025  </p>
-            <p>    License: Open Source  </p>
-        </u1>
+        <p>  
+            CellVision Desktop <br>
+            Version: 2.3 <br>
+            Version Release Date: October 2025 <br>
+            License: Open Source  
+        </p>
         <div class="cta-row">
             <a class="button primary" href="cellvision-open.zip">Download</a>
         </div>
