--- a/splash_page 5.html
+++ b/splash_page 5.html
@@ -245,10 +245,25 @@ footer {
 <section id="license" class="section">
     <details>
         <summary>Licensing & attribution</summary>
-        <p>
-            CellVision Open incorporates BatPaC Version 5.2,
-            © 2022 UChicago Argonne, LLC.
-        </p>
+         content.innerHTML = `
+                    <p>CellVision was originally built by Bedrock Materials and released to the public domain upon the company's dissolution. Users may download the originally released documents here.</p>
+                    <p>CellVision was inspired by and utilizes the cell manufacturing costs from BatPac V5.2, copyright 2022 under the following open source license:</b></p>
+                    <blockquote>
+                        <p><b>Copyright © 2022, UChicago Argonne, LLC</b><br>
+                        All Rights Reserved<br>
+                        Software Name: Battery Performance and Cost Model, BatPaC-Version 5.2<br>
+                        By: Argonne National Laboratory</p>
+                        <h4>OPEN SOURCE LICENSE</h4>
+                        <p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>
+                        <ol>
+                            <li>Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.</li>
+                            <li>Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.</li>
+                            <li>Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.</li>
+                        </ol>
+                        <h4>DISCLAIMER</h4>
+                        <p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+                    </blockquote>
+                `;
     </details>
 </section>
 
