--- a/splash_page 5.html
+++ b/splash_page 5.html
@@ -235,8 +235,9 @@ footer {
             <ul>
                 <li>Browser-based modeling</li>
                 <li>Saved projects</li>
-                <li>Advanced cost breakdowns</li>
-                <li>Collaboration</li>
+                <li>Saved design templates</li>
+                <li>New cell designs</li>
+                <li>New comparisson tool</li>
             </ul>
         </div>
     </div>
