--- a/splash_page 5.html
+++ b/splash_page 5.html
@@ -20,6 +20,7 @@
     --border: #ddd;
 }
 
+<!-- Check for valid email entry -->
 * {
     box-sizing: border-box;
 }
@@ -58,7 +59,33 @@
     }
   });
 </script>
-    
+
+<!-- Prevent formspree email submission redirect -->
+<script>
+  const form = document.getElementById("emailForm");
+  const successIcon = document.getElementById("form-success");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+
+    const response = await fetch(form.action, {
+      method: form.method,
+      body: formData,
+      headers: {
+        "Accept": "application/json"
+      }
+    });
+
+    if (response.ok) {
+      successIcon.style.display = "inline";
+    } else {
+      alert("There was an error submitting the form. Please try again.");
+    }
+  });
+</script>
+
 body {
     margin: 0;
     font-family: Inter, Helvetica, Arial, sans-serif;
@@ -298,6 +325,16 @@ footer {
     >
       Please enter a valid email address to enable the download.
     </p>
+
+      <button type="submit" class="button secondary">
+        Submit
+      </button>
+      <span
+        id="form-success"
+        style="display:none; color:green; margin-left:8px; font-weight:bold;"
+      >
+        ✓
+      </span>
     <!-- EMAIL GATE END -->
 
     <!-- DOWNLOAD CTA (GATED) -->
