--- a/splash_page 5.html
+++ b/splash_page 5.html
@@ -20,72 +20,6 @@
     --border: #ddd;
 }
 
-<!-- Check for valid email entry -->
-* {
-    box-sizing: border-box;
-}
-  const emailInput = document.getElementById("email");
-  const downloadBtn = document.getElementById("downloadBtn");
-  const errorText = document.getElementById("email-error");
-  const requiredStar = document.getElementById("email-required");
-
-  function isValidEmail(email) {
-    return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
-  }
-
-  emailInput.addEventListener("input", () => {
-    if (isValidEmail(emailInput.value)) {
-      errorText.style.display = "none";
-      requiredStar.style.display = "none";
-      downloadBtn.disabled = false;
-      downloadBtn.style.opacity = "1";
-      downloadBtn.style.cursor = "pointer";
-    } else {
-      downloadBtn.disabled = true;
-      downloadBtn.style.opacity = "0.5";
-      downloadBtn.style.cursor = "not-allowed";
-    }
-  });
-
-  downloadBtn.addEventListener("click", (e) => {
-    if (!isValidEmail(emailInput.value)) {
-      e.preventDefault();
-      errorText.style.display = "block";
-      requiredStar.style.display = "inline";
-      emailInput.style.border = "2px solid red";
-    } else {
-      // replace with your real download link
-      window.location.href = "CellVision_v2.3.zip";
-    }
-  });
-</script>
-
-<!-- Prevent formspree email submission redirect -->
-<script>
-  const form = document.getElementById("emailForm");
-  const successIcon = document.getElementById("form-success");
-
-  form.addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    const formData = new FormData(form);
-
-    const response = await fetch(form.action, {
-      method: form.method,
-      body: formData,
-      headers: {
-        "Accept": "application/json"
-      }
-    });
-
-    if (response.ok) {
-      successIcon.style.display = "inline";
-    } else {
-      alert("There was an error submitting the form. Please try again.");
-    }
-  });
-</script>
-
 body {
     margin: 0;
     font-family: Inter, Helvetica, Arial, sans-serif;
@@ -226,6 +160,74 @@ footer {
 </style>
 </head>
 
+<!-- check for valid email entry -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+* {
+    box-sizing: border-box;
+}
+  const emailInput = document.getElementById("email");
+  const downloadBtn = document.getElementById("downloadBtn");
+  const errorText = document.getElementById("email-error");
+  const requiredStar = document.getElementById("email-required");
+
+  function isValidEmail(email) {
+    return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+  }
+
+  emailInput.addEventListener("input", () => {
+    if (isValidEmail(emailInput.value)) {
+      errorText.style.display = "none";
+      requiredStar.style.display = "none";
+      downloadBtn.disabled = false;
+      downloadBtn.style.opacity = "1";
+      downloadBtn.style.cursor = "pointer";
+    } else {
+      downloadBtn.disabled = true;
+      downloadBtn.style.opacity = "0.5";
+      downloadBtn.style.cursor = "not-allowed";
+    }
+  });
+
+  downloadBtn.addEventListener("click", (e) => {
+    if (!isValidEmail(emailInput.value)) {
+      e.preventDefault();
+      errorText.style.display = "block";
+      requiredStar.style.display = "inline";
+      emailInput.style.border = "2px solid red";
+    } else {
+      // replace with your real download link
+      window.location.href = "CellVision_v2.3.zip";
+    }
+  });
+</script>
+
+<!-- Prevent formspree email submission redirect -->
+<script>
+  const form = document.getElementById("emailForm");
+  const successIcon = document.getElementById("form-success");
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+
+    const response = await fetch(form.action, {
+      method: form.method,
+      body: formData,
+      headers: {
+        "Accept": "application/json"
+      }
+    });
+
+    if (response.ok) {
+      successIcon.style.display = "inline";
+    } else {
+      alert("There was an error submitting the form. Please try again.");
+    }
+  });
+</script>
+    
 <body>
 
 <div class="container">
