renamed figure file names

--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@ footer {
     </ul>
 
     <div class="images">
-        <img src="website-graphic.png" alt="CellVision screenshot">
-        <img src="website-graphic2.png" alt="CellVision screenshot">
-        <img src="website-graphic3.png" alt="CellVision screenshot">
+        <img src="website graphic.png" alt="CellVision screenshot">
+        <img src="website graphic2.png" alt="CellVision screenshot">
+        <img src="website graphic3.png" alt="CellVision screenshot">
     </div>
 </section>
 
