--- a/Test Splash Page.html
+++ b/Test Splash Page.html
@@ -240,7 +240,7 @@ footer {
         Consent to Receive Newsletters
       </label>
       <p class="fs-description" id="newsletter-consent-description">
-        I agree to receive newsletters from CellVision LLC which include product updates, feature announcements, and requests for feedback or surveys. Unsubscribe at any time.
+        By checking the box above, you agree to receive news from CellVision LLC which includes product updates, feature announcements, and requests for feedback or surveys. You may Unsubscribe at any time.
       </p>
     </div>
      </p>
