Sent Consent to Formspree

--- a/Test Splash Page.html
+++ b/Test Splash Page.html
@@ -221,33 +221,11 @@ footer {
     </p>
 
     <!-- EMAIL GATE START -->
-    <p style="margin-top:16px;">
-      <strong>
-        To download CellVision V2.3, please enter your email.
-      </strong><br>
-     <div class="fs-checkbox-field">
-    <div class="fs-checkbox-wrapper">
-      <input
-        aria-describedby="newsletter-consent-description"
-        class="fs-checkbox"
-        id="newsletter-consent"
-        name="newsletter-consent"
-        required
-        type="checkbox"
-        value="yes"
-      />
-      <label class="fs-label" for="newsletter-consent">
-        Consent to Receive Newsletters
-      </label>
-      <p class="fs-description" id="newsletter-consent-description">
-        By checking the box above, you agree to receive news from CellVision LLC which includes product updates, feature announcements, and requests for feedback or surveys. You may Unsubscribe at any time.
-      </p>
-    </div>
-     </p>
     <form
       action="https://formspree.io/f/mlgronpn"
+      class="fs-form"
+      target="_top"
       method="POST"
-      id="emailForm"
       style="margin-top:8px;"
     >
       <label for="email">
@@ -272,6 +250,30 @@ footer {
       >
         ✓
       </span>
+            <p style="margin-top:16px;">
+      <strong>
+        To download CellVision V2.3, please enter your email.
+      </strong><br>
+     
+    <div class="fs-checkbox-field">
+    <div class="fs-checkbox-wrapper">
+      <input
+        aria-describedby="newsletter-consent-description"
+        class="fs-checkbox"
+        id="newsletter-consent"
+        name="newsletter-consent"
+        required
+        type="checkbox"
+        value="yes"
+      />
+      <label class="fs-label" for="newsletter-consent">
+        Consent to Receive Newsletters
+      </label>
+      <p class="fs-description" id="newsletter-consent-description">
+        By checking the box above, you agree to receive news from CellVision LLC which includes product updates, feature announcements, and requests for feedback or surveys. You may Unsubscribe at any time.
+      </p>
+    </div>
+     </p>
     </form>
 
     <p
