Made consent required

--- a/Test Splash Page.html
+++ b/Test Splash Page.html
@@ -264,6 +264,7 @@ footer {
         class="fs-checkbox"
         id="newsletter-consent"
         name="newsletter-consent"
+        required
         type="checkbox"
         value="yes"
       />
