--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@ footer {
       </label>
       <p class="fs-description" id="newsletter-consent-description">
         By checking the box above, you agree to receive news from CellVision LLC which includes product updates, feature announcements, and requests for feedback or surveys. You may Unsubscribe at any time.
+        <a href="#privacy" style="font-size:12px;">Privacy Policy</a>
       </p>
     </div>
     </form>
@@ -344,6 +345,65 @@ footer {
     </details>
 </section>
 
+<section id="privacy" class="section">
+  <details>
+    <summary>Privacy Policy</summary>
+    <p><strong>Last updated:</strong> 2026</p>
+
+<p>
+CellVision LLC (“CellVision”, “we”, “our”) respects your privacy. This Privacy Policy explains how we collect, use, and protect your information when you interact with the CellVision website or download CellVision software.
+</p>
+
+<h4>Information We Collect</h4>
+<p>
+We collect the following information only when you voluntarily provide it:
+</p>
+<ul>
+  <li>Your email address, submitted through our download or contact forms</li>
+</ul>
+
+<p>
+We do not collect sensitive personal information, payment information, or automatically collect personal data through tracking cookies.
+</p>
+
+<h4>How We Use Your Information</h4>
+<p>
+If you provide your email address, we may use it to:
+</p>
+<ul>
+  <li>Send product updates or announcements related to CellVision</li>
+  <li>Request feedback or participation in surveys</li>
+  <li>Respond to direct inquiries</li>
+</ul>
+
+<p>
+Emails are sent only to users who explicitly opt in. You may unsubscribe at any time using the link provided in any email.
+</p>
+
+<h4>Third-Party Services</h4>
+<p>
+We use third-party services solely to process form submissions and email communications (for example, Formspree). These services receive only the information necessary to perform their function and are required to handle your data securely.
+</p>
+
+<h4>Data Retention</h4>
+<p>
+We retain email addresses only as long as necessary to communicate about CellVision or until you unsubscribe or request deletion.
+</p>
+
+<h4>Your Rights</h4>
+<p>
+You may request access to, correction of, or deletion of your personal information at any time by contacting us at
+<a href="mailto:julia.lamb@cellvision.org">julia.lamb@cellvision.org</a>.
+</p>
+
+<h4>Changes to This Policy</h4>
+<p>
+We may update this Privacy Policy from time to time. Updates will be posted on this page with a revised “Last updated” date.
+</p>
+
+  </details>
+</section>
+    
 </div>
 
 <footer>
