Added Privacy Policy

--- a/survey/index.html
+++ b/survey/index.html
@@ -174,8 +174,8 @@ footer {
       name="email"
       required
     >
-    <small>We’ll only use this for CellVision-related updates.</small>
   </div>
+      <a href="https://cellvision.org/#privacy" style="font-size:12px;">Privacy Policy</a>
 
   <!-- 2) Usage -->
   <div class="field">
