Added diagrams to survey

--- a/survey/index.html
+++ b/survey/index.html
@@ -224,6 +224,12 @@ footer {
       <label><input type="checkbox" name="features[]" value="Degradation prediction"> Charge/discharge curve degradation prediction</label>
 
       <label>
+        <input type="checkbox" name="diagram" value="Additional Diagrams">
+        Additional diagrams or visualizations:
+        <input type="text" name="diagram_other" placeholder="Please specify">
+      </label>  
+      
+      <label>
         <input type="checkbox" name="features[]" value="Additional materials">
         Additional material types:
         <input type="text" name="materials_other" placeholder="Please specify">
