--- a/test/index.html
+++ b/test/index.html
@@ -199,6 +199,7 @@
           Consent to Receive Newsletters
         </label>
       </div>
+      <div id="signup-success-message" style="display:none;"></div>
 
       <button type="submit" class="button secondary" style="margin-top:12px;">
         Submit
@@ -239,6 +240,7 @@ document.addEventListener("DOMContentLoaded", () => {
   const successIcon = document.getElementById("form-success");
   const consentCheckbox = document.getElementById("newsletter-consent");
   const consentWrapper = document.getElementById("newsletter-wrapper");
+  const successMessage = document.getElementById("signup-success-message");
 
   function isValidEmail(email) {
     return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
@@ -248,6 +250,11 @@ document.addEventListener("DOMContentLoaded", () => {
     e.preventDefault();
 
     let hasError = false;
+
+    // Reset UI state
+    errorText.style.display = "none";
+    requiredStar.style.display = "none";
+    consentWrapper.classList.remove("newsletter-error");
 
     if (!isValidEmail(emailInput.value)) {
       errorText.style.display = "block";
@@ -274,6 +281,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
       if (!res.ok) throw new Error();
 
+      // Success UI
       successIcon.style.display = "inline";
       form.style.display = "none";
 
@@ -295,6 +303,7 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 });
 </script>
+
 
 </body>
 </html>
