--- a/test/index.html
+++ b/test/index.html
@@ -1,78 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CellVision – Battery Cost & Performance Modeling</title>
+    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>   CellVision – Battery Cost & Performance Modeling</title>
 
-  <style>
-    :root {
-      --bg: #f7f7f7;
-      --card: #ffffff;
-      --text: #222;
-      --muted: #666;
-      --accent: #7fae8f;
-      --accent-dark: #5f8f72;
-      --border: #ddd;
-    }
+<style>
+:root {
+    --bg: #f7f7f7;
+    --card: #ffffff;
+    --text: #222;
+    --muted: #666;
+    --accent: #7fae8f;
+    --accent-dark: #5f8f72;
+    --border: #ddd;
+}
 
-    body {
-      margin: 0;
-      font-family: Inter, Helvetica, Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-    }
+body {
+    margin: 0;
+    font-family: Inter, Helvetica, Arial, sans-serif;
+    background: var(--bg);
+    color: var(--text);
+    line-height: 1.6;
+}
 
-    .container {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 40px 20px;
-    }
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 40px 20px;
+}
 
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 60px;
-    }
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 60px;
+}
 
-    header img {
-      height: 40px;
-    }
+header img {
+    height: 40px;
+}
 
-    nav a {
-      margin-left: 20px;
-      text-decoration: none;
-      color: var(--muted);
-      font-size: 14px;
-    }
+nav a {
+    margin-left: 20px;
+    text-decoration: none;
+    color: var(--muted);
+    font-size: 14px;
+}
 
-    nav a:hover {
-      color: var(--text);
-    }
+nav a:hover {
+    color: var(--text);
+}
 
-    h1 {
-      font-size: 36px;
-      line-height: 1.2;
-      margin-bottom: 20px;
-    }
+h1 {
+    font-size: 36px;
+    line-height: 1.2;
+    margin-bottom: 20px;
+}
 
-    .hero p {
-      font-size: 18px;
-      color: var(--muted);
-    }
+.hero p {
+    font-size: 18px;
+    color: var(--muted);
+}
 
-    .cta-row {
-      margin-top: 30px;
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
+.cta-row {
+    margin-top: 30px;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
 
     .button {
       padding: 14px 22px;
@@ -83,72 +83,100 @@
       cursor: pointer;
     }
 
-    .primary {
-      background: var(--accent);
-      color: white;
-    }
-
-    .primary:hover {
-      background: var(--accent-dark);
-    }
-
-    .secondary {
-      border: 1px solid var(--border);
-      color: var(--text);
-      background: white;
-    }
-
-    .secondary:hover {
-      background: #f0f0f0;
-    }
-
-    .section {
-      margin-bottom: 80px;
-    }
-
-    .card {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 10px;
-      padding: 30px;
-    }
-
-    .badge {
-      display: inline-block;
-      font-size: 12px;
-      background: #eee;
-      padding: 4px 8px;
-      border-radius: 6px;
-      margin-bottom: 10px;
-    }
-
-    .newsletter-error label {
+    .newsletter-error label,
+    .newsletter-error p {
       color: red;
-    }
+}
 
-    footer {
-      border-top: 1px solid var(--border);
-      padding: 30px 20px;
-      font-size: 13px;
-      color: var(--muted);
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      justify-content: center;
-    }
-  </style>
+.primary {
+    background: var(--accent);
+    color: white;
+}
+
+.primary:hover {
+    background: var(--accent-dark);
+}
+
+.secondary {
+    border: 1px solid var(--border);
+    color: var(--text);
+    background: white;
+}
+
+.secondary:hover {
+    background: #f0f0f0;
+}
+
+.section {
+    margin-bottom: 80px;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 30px;
+}
+
+.card {
+    background: var(--card);
+    border: 1px solid var(--border);
+    border-radius: 10px;
+    padding: 30px;
+}
+
+.badge {
+    display: inline-block;
+    font-size: 12px;
+    background: #eee;
+    padding: 4px 8px;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+
+.images {
+    display: flex;
+    gap: 0px;
+    flex-wrap: wrap;
+}
+
+.images img {
+    max-width: 300px;
+    width: 100%;
+    border-radius: 6px;
+    border: 1px solid var(--border);
+}
+
+details {
+    background: var(--card);
+    border: 1px solid var(--border);
+    border-radius: 8px;
+    padding: 20px;
+}
+
+footer {
+    border-top: 1px solid var(--border);
+    padding: 30px 20px;
+    font-size: 13px;
+    color: var(--muted);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+}
+</style>
 </head>
 
 <body>
+
 <div class="container">
 
 <header>
-  <img src="cv-logo.png" alt="CellVision logo" />
-  <nav>
-    <a href="#open">Open</a>
-    <a href="#pro">Pro</a>
-    <a href="#license">License</a>
-  </nav>
+    <img src="cv-logo.png" alt="CellVision logo" />
+    <nav>
+        <a href="#open">Open</a>
+        <a href="#pro">Pro</a>
+        <a href="#license">License</a>
+    </nav>
 </header>
 
 <section class="hero">
@@ -159,10 +187,26 @@
     full SaaS platform.
   </p>
 
-  <div class="cta-row">
-    <a class="button primary" href="#open">Download CellVision Open</a>
-    <a class="button secondary" href="#pro">CellVision Pro — Coming Soon</a>
-  </div>
+    <div class="cta-row">
+        <a class="button primary" href="#open">Download CellVision Open</a>
+        <a class="button secondary" href="#pro">CellVision Pro — Coming Soon</a>
+    </div>
+</section>
+
+<section class="section">
+    <h2>What CellVision does</h2>
+    <ul>
+        <li>Compare material chemistries</li>
+        <li>Predict full cell performance</li>
+        <li>Explore cell design trade-offs</li>
+        <li>Estimate manufacturing cost drivers</li>
+    </ul>
+
+    <div class="images">
+        <img src="website graphic.png" alt="CellVision screenshot">
+        <img src="website graphic2.png" alt="CellVision screenshot">
+        <img src="website graphic3.png" alt="CellVision screenshot">
+    </div>
 </section>
 
 <section id="open" class="section">
@@ -172,7 +216,22 @@
     <span class="badge">Open Source</span>
 
     <p>
-      To download CellVision V2.3, please enter your email.
+      The original CellVision, developed by Bedrock Materials and
+      released to the public domain.
+    </p>
+
+    <p>
+      CellVision Desktop <br>
+      Version: 2.3 <br>
+      Version Release Date: October 2025 <br>
+      License: Open Source
+    </p>
+
+    <!-- EMAIL GATE START -->
+    <p style="margin-top:16px;">
+      <strong>
+        To download CellVision V2.3, please enter your email.
+      </strong><br>
     </p>
 
     <!-- FORM -->
@@ -193,6 +252,10 @@
         <label for="newsletter-consent">
           Consent to Receive Newsletters
         </label>
+          <p class="fs-description" id="newsletter-consent-description">
+        By checking the box above, you agree to receive news from CellVision LLC which includes product updates, feature announcements, and requests for feedback or surveys. You may Unsubscribe at any time.
+        <a href="#privacy" style="font-size:12px;">Privacy Policy</a>
+      </p>
       </div>
 
       <button type="submit" class="button secondary" style="margin-top:12px;">
@@ -205,6 +268,7 @@
       >
         ✓
       </span>
+
     </form>
 
     <!-- SUCCESS MESSAGE (NOW OUTSIDE THE FORM) -->
@@ -217,16 +281,114 @@
       id="email-error"
       style="color:red; display:none; margin-top:6px;"
     >
-      Please enter a valid email address.
+      Please enter a valid email address to enable the download.
     </p>
   </div>
+</section>
+
+<section id="pro" class="section">
+    <h2>CellVision Pro (SaaS)</h2>
+    <div class="cards">
+        <div class="card">
+            <span class="badge">Paid SaaS</span>
+            <ul>
+                <li>Browser-based modeling</li>
+                <li>Saved projects</li>
+                <li>Saved design templates</li>
+                <li>New cell designs</li>
+                <li>New comparisson tool</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+<section id="license" class="section">
+    <details>
+        <summary>Licensing & attribution</summary>
+                    <p>CellVision was originally built by Bedrock Materials and released to the public domain upon the company's dissolution. Users may download the originally released documents here.</p>
+                    <p>CellVision was inspired by and utilizes the cell manufacturing costs from BatPac V5.2, copyright 2022 under the following open source license:</b></p>
+                    <blockquote>
+                        <p><b>Copyright © 2022, UChicago Argonne, LLC</b><br>
+                        All Rights Reserved<br>
+                        Software Name: Battery Performance and Cost Model, BatPaC-Version 5.2<br>
+                        By: Argonne National Laboratory</p>
+                        <h4>OPEN SOURCE LICENSE</h4>
+                        <p>Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:</p>
+                        <ol>
+                            <li>Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.</li>
+                            <li>Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.</li>
+                            <li>Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.</li>
+                        </ol>
+                        <h4>DISCLAIMER</h4>
+                        <p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+                    </blockquote>
+    </details>
+</section>
+
+<section id="privacy" class="section">
+  <details>
+    <summary>Privacy Policy</summary>
+    <p><strong>Last updated:</strong> 2026</p>
+
+<p>
+CellVision LLC (“CellVision”, “we”, “our”) respects your privacy. This Privacy Policy explains how we collect, use, and protect your information when you interact with the CellVision website or download CellVision software.
+</p>
+
+<h4>Information We Collect</h4>
+<p>
+We collect the following information only when you voluntarily provide it:
+</p>
+<ul>
+  <li>Your email address, submitted through our download or contact forms</li>
+</ul>
+
+<p>
+We do not collect sensitive personal information, payment information, or automatically collect personal data through tracking cookies.
+</p>
+
+<h4>How We Use Your Information</h4>
+<p>
+If you provide your email address, we may use it to:
+</p>
+<ul>
+  <li>Send product updates or announcements related to CellVision</li>
+  <li>Request feedback or participation in surveys</li>
+  <li>Respond to direct inquiries</li>
+</ul>
+
+<p>
+Emails are sent only to users who explicitly opt in. You may unsubscribe at any time using the link provided in any email.
+</p>
+
+<h4>Third-Party Services</h4>
+<p>
+We use third-party services solely to process form submissions and email communications (for example, Formspree). These services receive only the information necessary to perform their function and are required to handle your data securely.
+</p>
+
+<h4>Data Retention</h4>
+<p>
+We retain email addresses only as long as necessary to communicate about CellVision or until you unsubscribe or request deletion.
+</p>
+
+<h4>Your Rights</h4>
+<p>
+You may request access to, correction of, or deletion of your personal information at any time by contacting us at
+<a href="mailto:julia.lamb@cellvision.org">julia.lamb@cellvision.org</a>.
+</p>
+
+<h4>Changes to This Policy</h4>
+<p>
+We may update this Privacy Policy from time to time. Updates will be posted on this page with a revised “Last updated” date.
+</p>
+
+  </details>
 </section>
 
 </div>
 
 <footer>
-  <img src="cv-logo.png" alt="CellVision logo" height="24">
-  <span>© CellVision LLC</span>
+    <img src="cv-logo.png" alt="CellVision logo" height="24">
+    <span>© CellVision LLC</span>
 </footer>
 
 <script>
@@ -261,12 +423,13 @@ document.addEventListener("DOMContentLoaded", () => {
       hasError = true;
     }
 
-    if (!consentCheckbox.checked) {
-      consentWrapper.classList.add("newsletter-error");
-      hasError = true;
-    }
+  // Newsletter consent validation
+  if (!consentCheckbox.checked) {
+    consentWrapper.classList.add("newsletter-error");
+    hasError = true;
+  }
 
-    if (hasError) return;
+  if (hasError) return;
 
     try {
       const res = await fetch(
@@ -299,6 +462,7 @@ document.addEventListener("DOMContentLoaded", () => {
       alert("Signup failed. Please try again.");
     }
   });
+
 });
 </script>
 
