Update survey introduction text

--- a/survey/index.html
+++ b/survey/index.html
@@ -164,7 +164,7 @@ footer {
 
 <h1>CellVision User Survey</h1>
 <p class="lead">
-  Help guide the future of CellVision. This short survey takes ~2 minutes.
+  We need your help to guide the future of CellVision! This short survey takes ~2 minutes.
 </p>
 
 <div class="card">
