--- a/survey/index.html
+++ b/survey/index.html
@@ -163,7 +163,7 @@ footer {
 
 <div class="card">
 
-<form action="https://formspree.io/f/XXXXXXXX" method="POST">
+<form action="https://formspree.io/f/xpqrolzv" method="POST">
 
   <!-- 1) Email -->
   <div class="field">
