--- a/survey/index.html
+++ b/survey/index.html
@@ -277,7 +277,16 @@ document.addEventListener("DOMContentLoaded", () => {
   const form = document.getElementById("survey");
   const emailInput = document.getElementById("email");
   const successMessage = document.getElementById("survey-success-message");
-  const featureCheckboxes = document.querySelectorAll('input[name="features[]"]'); 
+  const selectedFeatures =
+  document.querySelectorAll('input[name="features[]"]:checked');
+
+  if (selectedFeatures.length > 5) {
+  alert("Please select no more than 5 features.");
+  return;
+  }
+
+const features = Array.from(selectedFeatures).map(cb => cb.value);
+
   const MAX_FEATURES = 5;
 
   function updateFeatureCheckboxState() {
