--- a/survey/index.html
+++ b/survey/index.html
@@ -255,10 +255,11 @@ footer {
   <button type="submit">Submit survey</button>
 
      <!-- SUCCESS MESSAGE -->
-    <div
-      id="survey-success-message"
-      style="display:none; margin-top:20px;"
-    ></div>
+     <span
+        id="form-success"
+        style="display:none; color:green; margin-left:8px; font-weight:bold;"
+      >
+      </span>
 
 </form>
 
@@ -276,9 +277,8 @@ document.addEventListener("DOMContentLoaded", () => {
 
   const form = document.getElementById("survey");
   const emailInput = document.getElementById("email");
-  const successMessage = document.getElementById("survey-success-message");
-  const selectedFeatures =
-  document.querySelectorAll('input[name="features[]"]:checked');
+  const successMessage = document.getElementById("form-success");
+  const featureCheckboxes = document.querySelectorAll('input[name="features[]"]');
   const MAX_FEATURES = 5;
 
   function updateFeatureCheckboxState() {
@@ -331,38 +331,33 @@ document.addEventListener("DOMContentLoaded", () => {
       document.querySelector('input[name="features_other"]')?.value || null;
 
     // --- checkbox alert ---
-    const selectedFeatures =
-  document.querySelectorAll('input[name="features[]"]:checked');
+    const featureCheckboxes =
+      document.querySelectorAll('input[name="features[]"]:checked');
 
-if (selectedFeatures.length > MAX_FEATURES) {
-  alert("Please select no more than 5 features.");
-  return;
-}
+    if (featureCheckboxes.length > 5) {
+      alert("Please select no more than 5 features.");
+      return;
+    }
 
-const features = Array.from(selectedFeatures).map(cb => cb.value);
-
- // --- Send to backend ---
-   const res = await fetch(
-  "https://formspree.io/f/mdazpwzp",
-  {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json",
-      "Accept": "application/json"
-    },
-    body: JSON.stringify({
-      email: emailInput.value,
-      usage,
-      usageOther,
-      saasValue,
-      features,
-      diagramsOther,
-      materialsOther,
-      featuresOther
-    })
-  }
-);
+    const features = Array.from(featureCheckboxes).map(cb => cb.value);
     
+    // --- Send to backend ---
+      const res = await fetch(
+        "https://formspree.io/f/mdazpwzp", {
+           method: "POST",
+          headers: { "Accept": "application/json" }
+          body: JSON.stringify({
+            email: emailInput.value,
+            usage,
+            usageOther,
+            saasValue,
+            features,
+            diagramsOther,
+            materialsOther,
+            featuresOther
+          })
+      );
+
       if (!res.ok) throw new Error("submission failed");
 
       form.style.display = "none";
